<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D57E73"
    tools:context=".AddActivity">


    <EditText
        android:id="@+id/title_input"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:ems="10"
        android:hint="@string/title"
        android:inputType="textPersonName"
        android:translationX="30dp"
        android:translationY="150dp" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/select_type"
        android:translationY="230dp">

        <AutoCompleteTextView
            android:id="@+id/autoCompleteTypes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/select_type"
        android:translationY="330dp">

        <AutoCompleteTextView
            android:id="@+id/autoCompleteStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none" />


    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/text_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/type"
        android:textColor="#000000"
        android:textSize="17sp"
        android:translationX="30dp"
        android:translationY="220dp" />

    <TextView
        android:id="@+id/text_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/status"
        android:textColor="#000000"
        android:textSize="17sp"
        android:translationX="30dp"
        android:translationY="320dp" />

    <Button
        android:id="@+id/add_button"
        android:layout_width="100dp"
        android:layout_height="70dp"
        android:backgroundTint="#4EC4D3"
        android:text="@string/add"
        android:translationX="150dp"
        android:translationY="450dp" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
