<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D57E73"
    tools:context=".AddActivity">


    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/select_type"
        android:translationY="230dp">

        <AutoCompleteTextView
            android:id="@+id/autoCompleteTitleDel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none" />


    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/text_tittle_del"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textColor="#000000"
        android:textSize="17sp"
        android:translationX="30dp"
        android:translationY="220dp" />


    <Button
        android:id="@+id/delete_button"
        android:layout_width="100dp"
        android:layout_height="70dp"
        android:backgroundTint="#4EC4D3"
        android:text="@string/delete"
        android:translationX="150dp"
        android:translationY="350dp" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>