<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E44E4E"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textChoose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/alatsi"
        android:text="@string/selectProfile"
        android:textColor="#F4F7F8"
        android:textSize="38sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.519" />

    <ImageButton
        android:id="@+id/imageButton1"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="42dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/selectProfile"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toTopOf="@+id/textChoose"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.778"
        tools:ignore="DuplicateSpeakableTextCheck"
        tools:srcCompat="@drawable/avatar2"
        android:onClick="goToMenu"
        />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="42dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/selectProfile"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textChoose"
        app:layout_constraintVertical_bias="0.264"
        tools:srcCompat="@drawable/avatar3"
        android:onClick="goToMenu"
        />

    <ImageButton
        android:id="@+id/imageButton4"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginEnd="42dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/selectProfile"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textChoose"
        app:layout_constraintVertical_bias="0.264"
        tools:srcCompat="@drawable/avatar4"
        android:onClick="goToMenu"
        />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginEnd="42dp"
        android:adjustViewBounds="true"
        android:background="#00FDFDFD"
        android:contentDescription="@string/selectProfile"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toTopOf="@+id/textChoose"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.778"
        tools:srcCompat="@drawable/avatar1"
        android:onClick="goToMenu"
        />

    <TextView
        android:id="@+id/textTitleMM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/alatsi"
        android:text="@string/lenflis"
        android:textColor="#F4F0F0"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/textChoose"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.909"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.091" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="4dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        android:contentDescription="@string/logo"
        tools:srcCompat="@drawable/l_logos_transparent" />

</androidx.constraintlayout.widget.ConstraintLayout>